--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ img {
         margin-right: auto;
         margin-left: auto;
         top: 125px;
-        
-        
+
+
     }
 
     .nav-container {
@@ -136,7 +136,7 @@ img {
         text-decoration: none;
         list-style: none;
         display: flex;
-font-size: 16px;
+        font-size: 16px;
     }
 
     .navbar__links-item {
@@ -512,32 +512,32 @@ font-size: 16px;
 
     .bg-block-blue {
         position: absolute;
-left: 0%;
+        left: 0%;
 
-right: auto;
-bottom: auto;
-z-index: -11;
-width: 62.9%;
-height: 100%;
-max-height: 100%;
-min-height: 500px;
-min-width: 400px;
-border-top-right-radius: 55px;
-border-bottom-right-radius: 55px;
-background-color: #e6f1fb66;
+        right: auto;
+        bottom: auto;
+        z-index: -11;
+        width: 62.9%;
+        height: 100%;
+        max-height: 100%;
+        min-height: 500px;
+        min-width: 400px;
+        border-top-right-radius: 55px;
+        border-bottom-right-radius: 55px;
+        background-color: #e6f1fb66;
 
-}
+    }
 
-.about{
-    margin-top: 65px;
-    margin-bottom: 295px;
-}
-    
+    .about {
+        margin-top: 65px;
+        margin-bottom: 295px;
+    }
 
-    .social-media-color{
+
+    .social-media-color {
         color: #23c8bd;
         fill: #20e9db;
-        
+
 
     }
 
@@ -722,18 +722,20 @@ background-color: #e6f1fb66;
         -webkit-transition: all 350ms ease;
         transition: all 350ms ease;
     }
+
     .abt-social-icon:hover {
-    border: 2px solid #f8979b;
-    transform: translate(0px,0px);
-    
-}
+        border: 2px solid #f8979b;
+        transform: translate(0px, 0px);
+
+    }
+
     .social-logo {
         width: 60px;
         margin-bottom: 32px;
     }
 
 
-   
+
 
     .social-name {
 
@@ -744,11 +746,7 @@ background-color: #e6f1fb66;
 
     }
 
-    .social-navigation {
-        text-align: center;
-        margin-top: 9rem;
-        margin-left: auto;
-      }
+
 }
 
 
@@ -904,9 +902,10 @@ background-color: #e6f1fb66;
         max-width: 17em;
         margin-left: 1.5rem;
         margin-right: 1.5rem;
-        padding-top: 10rem;
+        padding-top: 0rem;
         padding-bottom: 2rem;
         text-align: left;
+        text-justify: auto;
     }
 
     h2 {
@@ -925,29 +924,38 @@ background-color: #e6f1fb66;
         margin-right: 1.5rem;
         max-width: 700px;
         padding-bottom: 3rem;
-        
+
     }
 
 
     .wrapper {
-        display: block;
+        display: flex;
+        flex-direction: column;
         grid-template-columns: 1fr 1fr;
-        max-width: 21em;
-        margin: 0;
+        max-width: 100%;
+        margin: 0 auto;
         padding-bottom: 50px;
         text-align: justify;
+    }
+
+    .no-bullets {
+        padding: 0rem 1rem;
+    }
+
+    .jcc {
+        justify-content: center;
     }
 
 
     h3 {
         font-size: 1.1rem;
-        
+
     }
 
     .skills-desc {
         font-size: .9rem;
         margin-bottom: 1.5rem;
-       
+
         line-height: 1.5;
         font-weight: 400;
 
@@ -978,12 +986,12 @@ background-color: #e6f1fb66;
         display: inline-block;
         padding: .35em .6em;
         border-radius: .25rem;
-        
+
         line-height: 1;
         white-space: nowrap;
         font-weight: 400;
         font-size: .75rem;
-        
+
     }
 
     /* footer */
@@ -1015,5 +1023,94 @@ background-color: #e6f1fb66;
     body {
         max-width: 100%;
         overflow-x: hidden;
+    }
+
+    .social-navigation {
+        text-align: center;
+        margin-top: 1rem;
+        margin-left: auto;
+        justify-content: space-evenly;
+    }
+
+    .social-link {
+        padding: 12px;
+    }
+
+    .abt-social-icon {
+
+        display: flex;
+        width: 100%;
+        min-height: 100px;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 6px;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        border-style: solid;
+        border-width: 2px;
+        border-color: #fff;
+        border-radius: 12px;
+        background-color: #fff;
+        box-shadow: 14px 14px 120px 0 rgb(139 131 131 / 18%);
+        -webkit-transition: all 350ms ease;
+        transition: all 350ms ease;
+    }
+
+    .social-logo {
+        width: 24px;
+        margin-bottom: 12px;
+    }
+
+    .social-name {
+        color: #03232b;
+        font-size: 12px;
+        font-weight: 600;
+        letter-spacing: -0.03em;
+    }
+
+    .title {
+        margin-bottom: 1.4rem;
+        margin-left: 1.4rem;
+        color: #b4b2c5;
+        font-size: 11px;
+        font-weight: 700;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+    }
+
+    .h1-title {
+        margin-top: 0;
+        margin-bottom: 3rem;
+        font-family: 'Poppins';
+        font-weight: 500;
+        letter-spacing: -0.05em;
+        color: #233C6C;
+        font-size: 54px;
+        line-height: 1;
+        margin-left: 1.4rem;
+    }
+
+    .heading-width {
+        max-width: 300px;
+    }
+
+    .about {
+        margin-top: 65px;
+        margin-bottom: 155px;
+    }
+
+    .small-profile-tab {
+        margin-left: 1.4rem;
     }
 }
